[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Images/Composition/Taguatinga/no_cenário.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/Composition/Taguatinga/policial_distrator_sizeFULL.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/Composition/Taguatinga/no _cenário.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/Composition/Taguatinga/3-Taguatinga (não-finalizado).png" type="Texture" id=4]
[ext_resource path="res://assets/Images/Composition/Taguatinga/caderno_pro_cenário.png" type="Texture" id=5]
[ext_resource path="res://scenes/ambience/01 - Taguatinga.gd" type="Script" id=6]
[ext_resource path="res://assets/Styles/Themes/CharacterChoice.tres" type="Theme" id=7]
[ext_resource path="res://assets/Images/Composition/Taguatinga/caderno_grande.png" type="Texture" id=8]
[ext_resource path="res://assets/Fonts/bebas_neue/BebasNeue-Regular.otf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/Images/Composition/Taguatinga/multidão.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "NewGame"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("FirstAccessMessage:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=3]
resource_name = "FadeIn"

[node name="Taguatinga" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 512.234, 289 )
texture = ExtResource( 4 )

[node name="ChefeDePolicia" type="Sprite" parent="."]
position = Vector2( 443, 443 )
scale = Vector2( 0.906753, 0.906753 )
texture = ExtResource( 2 )

[node name="ChafeButton" type="TextureButton" parent="ChefeDePolicia"]
anchor_bottom = 0.579
margin_left = -119.0
margin_top = -279.0
margin_right = 115.0
margin_bottom = -134.5

[node name="DistratorPolicial" type="Sprite" parent="."]
position = Vector2( 630, 465 )
scale = Vector2( 0.93125, 0.93125 )
texture = ExtResource( 1 )

[node name="DistratorButton" type="TextureButton" parent="DistratorPolicial"]
margin_left = -79.0
margin_top = -249.0
margin_right = 90.0
margin_bottom = 120.0

[node name="JoséMiguel" type="Sprite" parent="."]
position = Vector2( 112, 423 )
scale = Vector2( 0.471154, 0.471154 )
texture = ExtResource( 3 )

[node name="JoséButton" type="TextureButton" parent="JoséMiguel"]
margin_left = -100.0
margin_top = -248.0
margin_right = 100.0
margin_bottom = 248.0

[node name="Caderno" type="Sprite" parent="."]
position = Vector2( 870, 530 )
texture = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 816.0
margin_top = 499.0
margin_right = 927.0
margin_bottom = 561.0

[node name="FirstAccessMessage" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -502.0
margin_top = -228.0
margin_right = 26.0
margin_bottom = 37.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 257, 104 )
theme = ExtResource( 7 )

[node name="MessageText" type="Label" parent="FirstAccessMessage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -238.0
margin_top = -115.5
margin_right = 229.0
margin_bottom = 115.5
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
align = 1
valign = 1
autowrap = true

[node name="FirstAccessMessageAnimation" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/NewGame = SubResource( 1 )

[node name="NotebookWind" type="WindowDialog" parent="."]
margin_left = 122.0
margin_top = 88.0
margin_right = 867.0
margin_bottom = 470.0
theme = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="NotebookWind"]
position = Vector2( 337, 135 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="NotebookWind"]
margin_left = 119.0
margin_top = 254.0
margin_right = 560.0
margin_bottom = 356.0
custom_colors/font_color = Color( 0.215686, 0.298039, 0.388235, 1 )
custom_fonts/font = SubResource( 2 )
text = "Você Achou o item!"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Multidão" type="Sprite" parent="."]
position = Vector2( 514.247, 326 )
scale = Vector2( 0.999999, 1.068 )
texture = ExtResource( 10 )

[node name="FadeInMuldtidão" type="AnimationPlayer" parent="."]
root_node = NodePath("../Multidão")
anims/FadeIn = SubResource( 3 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="popup_hide" from="FirstAccessMessage" to="." method="_on_FirstAccessMessage_popup_hide"]
[connection signal="popup_hide" from="NotebookWind" to="." method="_on_NotebookWind_popup_hide"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
